# pet

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  package-deb.yml  package-dmg.yml  package-msi.yml  package-rpm.yml  release.yml
assets/packaging/linux/: pet.desktop
assets/packaging/macos/: Info.plist  wrapper.sh
assets/packaging/macos/graphics/: app.icns
assets/packaging/windows/: setup.wxs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs  process.rs
crates/app/src/ipc/: mod.rs  router.rs  server.rs
crates/app/tests/: ipc_integration.rs
crates/common/: Cargo.toml
crates/common/src/: autostart.rs  config.rs  error.rs  ipc.rs  lib.rs  models.rs  paths.rs  script.rs  storage.rs
crates/manager/: Cargo.toml
crates/manager/src/: app.rs  main.rs  meshy.rs
crates/manager/src/views/: create_pet.rs  generation.rs  mod.rs  pet_list.rs
crates/settings/: Cargo.toml
crates/settings/src/: app.rs  main.rs
crates/settings/src/views/: about.rs  ai.rs  appearance.rs  general.rs  meshy.rs  mod.rs
crates/theater/: Cargo.toml
crates/theater/src/: app.rs  components.rs  events.rs  main.rs  resources.rs  systems.rs
crates/theater/src/plugins/: interaction.rs  ipc.rs  mod.rs  pet.rs  replay.rs
crates/theater/src/systems/: animation.rs  bounce.rs  keyframe.rs  mod.rs  movement.rs  rotation.rs  scale.rs  script_transition.rs
crates/tray/: Cargo.toml
crates/tray/src/: ipc.rs  main.rs  menu.rs
docs/: architecture.md  product.md  roadmap.md
