[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0-rc.5"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
bevy = { version = "0.18", default-features = false }
common = { path = "crates/common" }
config = { version = "0.15", features = ["toml"] }
directories = "6"
iced = { version = "0.14", features = ["tokio"] }
jiff = { version = "0.2", features = ["serde"] }
notify = "8"
rand = "0.10"
reqwest = { version = "0.13", features = ["json"] }
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full", "process"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tray-icon = "0.21"
uuid = { version = "1", features = ["v4", "serde"] }
winit = "0.30"
