[package]
name = "app"
version.workspace = true
edition.workspace = true
description = "Main process for Pet desktop companion"

[[bin]]
name = "pet"
path = "src/main.rs"

[dependencies]
common.workspace = true
tokio.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
