[package]
name = "common"
version.workspace = true
edition.workspace = true
description = "Shared library for Pet desktop companion"

[dependencies]
config.workspace = true
directories.workspace = true
jiff.workspace = true
ron.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
