[package]
name = "manager"
version.workspace = true
edition.workspace = true
description = "Manager process (Iced) for Pet desktop companion"

[[bin]]
name = "pet-manager"
path = "src/main.rs"

[dependencies]
common.workspace = true
iced.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
