[package]
name = "settings"
version.workspace = true
edition.workspace = true
description = "Settings process (Iced) for Pet desktop companion"

[[bin]]
name = "pet-settings"
path = "src/main.rs"

[dependencies]
common.workspace = true
iced.workspace = true
# Workaround for naga 27.0.3 failing to compile without `termcolor`:
# `iced_wgpu` -> `cryoglyph` -> `wgpu` 27 -> `naga` 27 is built without
# the feature, but `naga`'s diagnostic formatting requires it.
naga.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
