[package]
name = "theater"
version.workspace = true
edition.workspace = true
description = "Theater process (Bevy) for Pet desktop companion"

[[bin]]
name = "pet-theater"
path = "src/main.rs"

[dependencies]
common.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dependencies.bevy]
workspace = true
features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_winit",
    "gltf_animation",
    "png",
    "reflect_auto_register",
    "tonemapping_luts",
    "wayland",
    "x11",
    "zstd_rust",
]
