[package]
name = "tray"
version.workspace = true
edition.workspace = true
description = "System tray process for Pet desktop companion"

[[bin]]
name = "pet-tray"
path = "src/main.rs"

[dependencies]
common.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tray-icon.workspace = true
winit.workspace = true
